# deep-learning-course-notebooks

./: .gitignore  Notas_extra.md  notas_extra_prac2.md  notas_extra_prac4.md  pyproject.toml
notebooks/: README.md  notebook_0.ipynb  notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_4.ipynb  notebook_5.ipynb
notebooks/solutions/: notebook_0_solution.ipynb  notebook_1_solution.ipynb
