[project]
name = "dl-notebooks"
version = "0.1.0"
description = "Notebooks for deep learning course at UCU"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "optuna>=4.8.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.25.0",
    "traitlets>=5.14.3",
]
